--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "smartstudy-ai---quản-lý-học-tập-&-thời-gian",
+  "name": "smartstudy-ai",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,17 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "uuid": "^13.0.0",
-    "@google/genai": "^1.31.0",
-    "recharts": "^3.5.1",
-    "lucide-react": "^0.556.0",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1"
+    "react": "*",
+    "react-dom": "*",
+    "@google/genai": "*",
+    "lucide-react": "*",
+    "recharts": "*",
+    "uuid": "*"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "*",
+    "@types/react-dom": "*",
+    "@types/uuid": "*",
+    "@vitejs/plugin-react": "*",
+    "typescript": "*",
+    "vite": "*"
   }
 }
